# rapids-logger

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  dependencies.yaml  logger.hpp.in  logger_impl.hpp.in  rapids_config.cmake
.github/: CODEOWNERS  ops-bot.yaml
.github/workflows/: build.yaml  pr.yaml
ci/: build_conda.sh  build_dynamic.sh  build_static.sh  build_wheel.sh  build_wheel_rapids_logger.sh  check_style.sh  check_symbols.sh
ci/release/: update-version.sh
cmake/: RAPIDS.cmake
conda/recipes/rapids-logger/: recipe.yaml  variants.yaml
include/rapids_logger/: logger.hpp
python/rapids-logger/: CMakeLists.txt  pyproject.toml
src/: logger.cpp
tests/: CMakeLists.txt  basic_test.cpp
tests/template/: CMakeLists.txt  cmake_test.cmake
tests/template/generate_logger_macros/: CMakeLists.txt  test.cpp
tests/test_dynamic_libs/: CMakeLists.txt  env.yaml
